==> Lien182/CANOpen-PushButton/software/Src/CO_driver.c <==
#include <stdlib.h>
#include <string.h>
#include "stm32f0xx_hal.h"
#include "CO_driver.h"
#include "../CANopenNode/stack/CO_Emergency.h"
#include "../Inc/stm32f042_hal_exclude.h"

CO_ReturnError_t CO_CANmodule_init(
        CO_CANmodule_t         *CANmodule,
        uint32_t                CANbaseAddress,
        CO_CANrx_t              rxArray[],
        uint16_t                rxSize,
        CO_CANtx_t              txArray[],
        uint16_t                txSize,
        uint16_t                CANbitRate,
				uint8_t                 nodeId)
{
    uint16_t i;
    CAN_FilterConfTypeDef CAN_FilterInitStruct;
		uint8_t result;
	
    /* verify arguments */
    if(CANmodule==NULL || rxArray==NULL || txArray==NULL){
        return CO_ERROR_ILLEGAL_ARGUMENT;
    }

    /* Configure object variables */
    CANmodule->CANbaseAddress = CANbaseAddress;
    CANmodule->rxArray = rxArray;
    CANmodule->rxSize = rxSize;
    CANmodule->txArray = txArray;
    CANmodule->txSize = txSize;
    CANmodule->CANnormal = false;
    CANmodule->useCANrxFilters = (rxSize <= 32U) ? true : false;/* microcontroller dependent */
    CANmodule->bufferInhibitFlag = false;
    CANmodule->firstCANtxMessage = true;
    CANmodule->CANtxCount = 0U;
    CANmodule->errOld = 0U;
    CANmodule->em = NULL;

    for(i=0U; i<rxSize; i++){
        CANmodule->rxArray[i].ident = 0U;
        CANmodule->rxArray[i].pFunct = NULL;
    }
    for(i=0U; i<txSize; i++){
        CANmodule->txArray[i].bufferFull = false;
    }

		hcan.Instance = CAN;
			/* deinit CAN controller */
		HAL_CAN_DeInit(&hcan);
	
    switch (CANbitRate)
    {
        case 1000: hcan.Init.Prescaler = 8;
            break;
        case 500: hcan.Init.Prescaler =  16;
            break;
        default:
        case 250: hcan.Init.Prescaler = 32;
            break;
        case 125: hcan.Init.Prescaler = 64;
            break;
        case 100: hcan.Init.Prescaler = 30;
            break;
        case 50: hcan.Init.Prescaler = 160;
            break;
				case 25: hcan.Init.Prescaler = 320;
            break;
        case 20: hcan.Init.Prescaler = 400;
            break;
        case 10: hcan.Init.Prescaler = 800;
            break;
    }
		
    hcan.Init.SJW = CAN_SJW_1TQ;     // changed by CL, old value = CAN_SJW_1tq;
    hcan.Init.BS1 = CAN_BS1_13TQ;    // changed by CL, old value = CAN_BS1_3tq;
    hcan.Init.BS2 = CAN_BS2_2TQ;     // changed by CL, old value = CAN_BS2_2tq;
		
    //Added 10.11.2017
    hcan.Init.Mode = CAN_MODE_NORMAL;
    hcan.Init.TTCM = DISABLE;
    hcan.Init.ABOM = DISABLE;
    hcan.Init.AWUM = DISABLE;
    hcan.Init.NART = ENABLE;
    hcan.Init.RFLM = DISABLE;
    hcan.Init.TXFP = DISABLE;
            
    hcan.pTxMsg = &txmsg;
    hcan.pRxMsg = &rxmsg;

    result = HAL_CAN_Init(&hcan);
    if (result != 0)
        {
       return CO_ERROR_TIMEOUT;  /* CO- Return Init failed */
    }
  

    /*
		Filter configuration:
        
		CANOpen Messages:
        Function Code (e.g. TxPDO1, ...)    [10:07]
        Node ID                             [06:00]
    */
		
	//node dependend message filter
    memset(&CAN_FilterInitStruct, 0, sizeof (CAN_FilterInitStruct));
    CAN_FilterInitStruct.FilterNumber 		= 0;
    CAN_FilterInitStruct.FilterIdHigh 		= (uint32_t)nodeId << 5;
    CAN_FilterInitStruct.FilterIdLow 			= (uint32_t)nodeId << 5;
    CAN_FilterInitStruct.FilterMaskIdHigh = 0x0000007F << 5;    
		CAN_FilterInitStruct.FilterMaskIdLow  = 0x0000007F << 5; 		//don't care function code, care node id
    CAN_FilterInitStruct.FilterFIFOAssignment = CAN_FIFO0; // 
    CAN_FilterInitStruct.FilterMode = CAN_FILTERMODE_IDMASK;
    CAN_FilterInitStruct.FilterScale = CAN_FILTERSCALE_16BIT;
    CAN_FilterInitStruct.FilterActivation = ENABLE;
    HAL_CAN_ConfigFilter(&hcan, &CAN_FilterInitStruct);

    memset(&CAN_FilterInitStruct, 0, sizeof (CAN_FilterInitStruct));
    CAN_FilterInitStruct.FilterNumber 		= 1;
    CAN_FilterInitStruct.FilterIdHigh 		= 0x00000000;
    CAN_FilterInitStruct.FilterIdLow 			= 0x00000000;
    CAN_FilterInitStruct.FilterMaskIdHigh = 0x00000080 << 5;    
		CAN_FilterInitStruct.FilterMaskIdLow  = 0x00000000 << 5; 		//don't care function code, care node id
    CAN_FilterInitStruct.FilterFIFOAssignment = CAN_FIFO0; // 
    CAN_FilterInitStruct.FilterMode = CAN_FILTERMODE_IDLIST;
    CAN_FilterInitStruct.FilterScale = CAN_FILTERSCALE_16BIT;
    CAN_FilterInitStruct.FilterActivation = ENABLE;
    HAL_CAN_ConfigFilter(&hcan, &CAN_FilterInitStruct);



		__HAL_CAN_ENABLE_IT(&hcan,CAN_IT_TME | CAN_IT_FMP0);
		
    return CO_ERROR_NO;
}

void CO_CANverifyErrors(CO_CANmodule_t *CANmodule){
	
	 uint32_t err;
   CO_EM_t* em = (CO_EM_t*)CANmodule->em;

	
   err = hcan.Instance->ESR;
  
   if(CANmodule->errOld != err)
   {
      CANmodule->errOld = err;

      //CAN RX bus overflow
      if(hcan.Instance->RF0R & 0x08)
      {
         CO_errorReport(em, CO_EM_CAN_RXB_OVERFLOW, CO_EMC_CAN_OVERRUN, err);
         hcan.Instance->RF0R &=~0x08;//clear bits
      }

      //CAN TX bus off
      if(err & 0x04) CO_errorReport(em, CO_EM_CAN_TX_BUS_OFF, CO_EMC_BUS_OFF_RECOVERED, err);
      else           CO_errorReset(em, CO_EM_CAN_TX_BUS_OFF, err);

      //CAN TX or RX bus passive
      if(err & 0x02)
      {
         if(!CANmodule->firstCANtxMessage) CO_errorReport(em, CO_EM_CAN_TX_BUS_PASSIVE, CO_EMC_CAN_PASSIVE, err);
      }
      else
      {
        // int16_t wasCleared;
        /* wasCleared = */CO_errorReset(em, CO_EM_CAN_TX_BUS_PASSIVE, err);
        /* if(wasCleared == 1) */CO_errorReset(em, CO_EM_CAN_TX_OVERFLOW, err);
      }


      //CAN TX or RX bus warning
      if(err & 0x01)
      {
         CO_errorReport(em, CO_EM_CAN_BUS_WARNING, CO_EMC_NO_ERROR, err);
      }
      else
      {
         CO_errorReset(em, CO_EM_CAN_BUS_WARNING, err);
      }
		}
}

uint32_t CO_CANinterrupt(CO_CANmodule_t *CANmodule){

	DEBUG_1_Port->BSRR = (uint32_t)DEBUG_2_Pin;

	
  /* receive interrupt */
  if  /* Check End of reception flag for FIFO0 */
	((__HAL_CAN_GET_IT_SOURCE(&hcan, CAN_IT_FMP0)) &&
  (__HAL_CAN_MSG_PENDING(&hcan, CAN_FIFO0) != 0U)) 
  {
		uint16_t index;             /* index of received message */
        bool_t msgMatched = false;

		//get and copy data
		CanRxMsgTypeDef rx;
		CAN_Receive(&hcan, CAN_FIFO0, &rx);


		CO_CANrx_t *msgBuff = CANmodule->rxArray;
        
        uint16_t msg = (rx.StdId << 2) | (rx.RTR ? 2 : 0);

		for (index = 0; index < CANmodule->rxSize; index++)
		{
					if (((msg ^ msgBuff->ident) & msgBuff->mask) == 0)
					{
							msgMatched = 1;
							break;
					}
					msgBuff++;
		}
			

        /* Call specific function, which will process the message */
	    if (msgMatched && msgBuff->pFunct)
            msgBuff->pFunct(msgBuff->object, &rx);
 
			DEBUG_1_Port->BRR = (uint32_t)DEBUG_2_Pin;
			return 1;
   }
   /* transmit interrupt */
    else if(__HAL_CAN_GET_IT_SOURCE(&hcan, CAN_IT_TME)){
        /* Clear interrupt flag */
				__HAL_CAN_DISABLE_IT(&hcan, CAN_IT_TME);
			
        /* First CAN message (bootup) was sent successfully */
        CANmodule->firstCANtxMessage = false;
        /* clear flag from previous message */
        CANmodule->bufferInhibitFlag = false;
        /* Are there any new messages waiting to be send */
        if(CANmodule->CANtxCount > 0U){
            uint16_t i;             /* index of transmitting message */

            /* first buffer */
            CO_CANtx_t *buffer = &CANmodule->txArray[0];
            /* search through whole array of pointers to transmit message buffers. */
            for(i = CANmodule->txSize; i > 0U; i--){
                /* if message buffer is full, send it. */
                if(buffer->bufferFull){
                    buffer->bufferFull = false;
                    CANmodule->CANtxCount--;
                    /* Copy message to CAN buffer */
                    CANmodule->bufferInhibitFlag = buffer->syncFlag;
                    /* canSend... */
										CO_CANsendToModule(CANmodule, buffer);
                    break;                      /* exit for loop */
                }
                buffer++;
            }/* end of for loop */

            /* Clear counter if no more messages */
            if(i == 0U){
                CANmodule->CANtxCount = 0U;
            }
        }
				DEBUG_1_Port->BRR = (uint32_t)DEBUG_2_Pin;
				return 1;
    }
    else{
			 DEBUG_1_Port->BRR = (uint32_t)DEBUG_2_Pin;
       return 0;
    }
		
		
}
